    44- new GP functions fftinit, fft, fftinv
BA  45- [libpari] init_Flxq
    46- compact representation of units in bnf (bnfinit(pol,1)) and of
        principal ideal generators (bnfisprincipal(bnf,id,4))
    47- [libpari] Flv_factorback, FlxqV_factorback, famatV_zv_factorback,
        famatV_factorback
    48- [libpari] nflogembed, nf_cxlog, nfV_cxlog, ZMrow_equal0, ZC_u_divexact

  Removed
     1- obsolete function rootsof1_kannan: use nfrootsof1

Done for version 2.12.0 (released 01/06/2019):
  Fixed
     1- memory leaks due to the use of varhigher/varlower
     2- memory leak on error in plots
     3- memory leak on error in newtoncharpoly
     4- heap-buffer-overflow in init_prefix [readline]
     5- mfsplit(mf,,flag) could return uninitialized objects => SEGV
     6- mfeisenstein(k,,chi) was treated as E(k,chi) instead of E(k,1,chi)
     7- poldegree(y/x) -> 0 [ instead of -1 ]
     8- sumeulerrat(y/x^2,1) -> junk
HC   9- incgam(-1000.4,2) -> SEGV
    10- mfatkininit(mfinit([366,2]),2) -> precision error
    11- forprimestep: wrong when wrapping word boundary (2^32 or 64) [#2071]
    12- mfbracket: [f,g]_m was multiplied by (-1)^m
    13- wrong results in mfatkininit / mfatkineigenvalues due to insufficient
        precision [#2073/#2074]
    14- issquare(Mod(x,ffinit(3,2))) -> wrong result [broken Fq_ispower]
    15- possible SEGV in rnfpseudobasis(, [pol,lim])
    16- wrong result in elllog over F_p, p in [2^63,2^64[
        p=13824553909862352061; A=8953655473130154624; B=9775907253961339458;
        P=[6444058885176327583,7963649599850249187];
        E=ellinit([A,B],p); Q=ellmul(E,P,2);
        elllog(E,Q,P) -> 0 [ Flj_mulu_pre would not accept n >= 2^63 ]
    17- wrong result in mfsymboleval when path extremities are close to real
        axis (cusps were OK) [#2075]
    18- mfcoefs(mfDelta(),0) -> SEGV [#2078]
    19- GC error in lfuncreate(elliptic curve over number field) [#2080]