@@ -6107,6 +6107,10 @@ returns $a$ modulo $X^n$.
 as a composition of formal power series.
 It is required that the valuation of $x$ is positive and that $p>n$.
 
+\fun{GEN}{Flxn_expint}{GEN f, long n, ulong p} return $\exp(F)$
+where $F$ is the primitive of $f$ that vanishes at $0$.
+It is required that $p>n$.
+
 \subsec{\kbd{Flxq}} See \kbd{FpXQ} operations.
 
 \fun{GEN}{Flxq_add}{GEN x, GEN y, GEN T, ulong p}
