@@ -441,6 +441,7 @@ GEN     FlxY_evalx(GEN Q, ulong x, ulong p);
 GEN     FlxY_evalx_powers_pre(GEN pol, GEN ypowers, ulong p, ulong pi);
 GEN     FlxYqq_pow(GEN x, GEN n, GEN S, GEN T, ulong p);
 GEN     Flxn_exp(GEN h, long e, ulong p);
+GEN     Flxn_expint(GEN h, long e, ulong p);
 GEN     Flxn_inv(GEN f, long e, ulong p);
 GEN     Flxn_mul(GEN a, GEN b, long n, ulong p);
 GEN     Flxn_sqr(GEN a, long n, ulong p);
